--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "firebase": "^5.7.1",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
+    "vue-sweetalert2": "^1.6.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
